k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-api
spec:
  selector:
    app: task-api
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  type: ClusterIP
